# sockcan

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: index.md
explanation/core_concepts/: index.html
explanation/overview/: index.html
how-to-guides/advanced_usage/: index.html
how-to-guides/basic_usage/: index.html
reference/api/: index.html
reference/error_codes/: index.html
search/: search_index.json
src/sockcan/: __init__.py  _protocol.py  interop.py
src/sockcan/benchmarks/: __init__.py  __main__.py  _bench.py  _bench_daemon.py
src/sockcan/daemon/: __init__.py  __main__.py  _client.py  _server.py
src/sockcan/fixtures/: __init__.py  _bus.py  _messages.py
src/sockcan/transcoders/: __init__.py  _common.py  _decoders.py  _encoders.py
tests/: kcd_sample.kcd  test_daemon.py  test_encode.py  test_fixtures.py  test_interop.py  test_protocol.py  test_transcoders.py
tutorials/getting_started/: index.html
tutorials/virtual_can/: index.html
tutorials/windows_setup/: index.html
