[build-system]
# Note: cantools only there because mypyc needs the type stubs at install-time
requires = ["hatchling", "hatch-vcs", "smelt[build]==0.6.1", "cantools"]
build-backend = "hatchling.build"

[project]
name = "sockcan"
# setting version to VCS so hatch will automatically use tags for versioning
dynamic = ["version"]
description = "Provides a socketcan-alike interface other arbitrary CAN drivers"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Baptiste Pestourie" }]
dependencies = []

[project.optional-dependencies]
transcoders = ["cantools"]
daemon = ["click", "python-can"]
test = ["hypothesis", "pytest", "python-can", "cantools"]
docs = ["mkdocs", "mkdocs-material"]
lint = ["ruff", "mypy"]
# an extra that contains all other extras relevant for users of sockcan
all_inclusive = ["python-can", "cantools", "click", "python-can"]
# an extra that contains all extras relvant for dev use
dev = [
  "hypothesis",
  "pytest",
  "python-can",
  "cantools",
  "click",
  "python-can",
  "ruff",
  "mypy",
  "hypothesis",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/Hedwyn/sockcan"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/sockcan"]

[tool.hatch.build.hooks.smelt]
packages_location = { "sockcan" = "src/sockcan" }
platforms = ["linux"]
mypyc_modules = [
  { import_path = "sockcan._protocol", extras = [
    "transcoders",
  ] },
  { import_path = "sockcan.transcoders._common", extras = [
    "transcoders",
  ] },
  { import_path = "sockcan.transcoders._decoders", extras = [
    "transcoders",
  ] },
  { import_path = "sockcan.transcoders._encoders", extras = [
    "transcoders",
  ] },
  { import_path = "sockcan.daemon._server", extras = [
    "daemon",
  ] },
  { import_path = "sockcan.daemon._client", extras = [
    "daemon",
  ] },
]
